# spark-substrait-gateway

./: .dockerignore  .gitignore  .gitmodules  .licenserc.yaml  CONTRIBUTING.md  Dockerfile  README.md  buf.gen.yaml  buf.work.yaml  conftest.py  docker_build_and_push.sh  environment.yml  gen_proto.sh  pyproject.toml  sparkgateway.db  sparkgateway.db.wal  update.sh
.github/workflows/: build_docker.yml  pr_title.yml  pylint.yml  ruff.yml  test.yml
helm-chart/: .helmignore  Chart.yaml  README.md  install_helm_chart.sh  values.yaml
helm-chart/secrets/: README.md
helm-chart/secrets/opaque/: README.md
helm-chart/secrets/tls/: README.md
helm-chart/templates/: NOTES.txt  _helpers.tpl  global-secret.yaml  server-service.yaml  server-statefulset.yaml  tls-secret.yaml
scripts/: pip_verbose.sh  start_demo_server.sh
src/: POTATO.py
src/backends/: README.md  adbc_backend.py  arrow_backend.py  arrow_tools.py  backend.py  backend_options.py  backend_selector.py  datafusion_backend.py  duckdb_backend.py  ibis_backend.py
src/backends/tests/: arrow_tools_test.py
src/backends/tools/: duckdb_substrait_to_arrow.py
src/backends/tools/tests/: simplify_casts_test.py
src/backends/tools/tests/data/: two-casts.golden
src/gateway/: __init__.py  _version.py  config.py  security.py  server.py
src/gateway/adbc/: backend.py  backend_options.py
src/gateway/backends/: adbc_backend.py  arrow_backend.py  backend.py  backend_options.py  backend_selector.py  datafusion_backend.py  duckdb_backend.py
src/gateway/converter/: add_extension_uris.py  conversion_options.py  label_relations.py  output_field_tracking_visitor.py  rename_functions.py  replace_local_files.py  simplify_casts.py  spark_functions.py  spark_to_substrait.py  spark_to_substrait_test.py  sql_to_substrait.py  substrait_builder.py  substrait_plan_visitor.py  symbol_table.py  validation_test.py
src/gateway/converter/data/: 00001.spark  00001.splan  count.sql  count.sql-splan  select.sql-splan
src/gateway/converter/tests/: spark_to_substrait_test.py  validation_test.py
src/gateway/converter/tests/data/: 00001.splan  count.sql  count.sql-splan  select.sql  select.sql-splan
src/gateway/converter/tools/: duckdb_substrait_to_arrow.py
src/gateway/converter/tools/tests/: simplify_casts_test.py
src/gateway/converter/tools/tests/data/: single-cast.golden  single-cast.json  two-casts.json
src/gateway/demo/: USING_SCALA.md  client_demo.go  client_demo.py  generate_tpch_parquet_data.py  go.mod  go.sum  mystream_database.py  setup_demos.py
src/gateway/setup/: tls_utilities.py
src/gateway/tests/: compare_dataframes.py  conftest.py  plan_validator.py  test_dataframe_api.py  test_server.py  test_sql_api.py  test_table.parquet  test_tpcds_sql.py  test_tpcds_with_dataframe_api.py  test_tpch_with_dataframe_api.py
src/gateway/tests/data/tpc-ds/: 16.sql  32.sql  62.sql  92.sql  94.sql  95.sql  99.sql
src/gateway/tests/data/tpc-h/: 04.sql
src/gateway/tests/queries/tpc/ds/: 50.sql
src/gateway/utilities/: create_jwt.py
src/spark/connect/: base_pb2.py  base_pb2.pyi  base_pb2_grpc.py  catalog_pb2.py  catalog_pb2.pyi  commands_pb2.py  commands_pb2.pyi  common_pb2.py  common_pb2.pyi  example_plugins_pb2.py  example_plugins_pb2.pyi  expressions_pb2.py  expressions_pb2.pyi  relations_pb2.py  relations_pb2.pyi  types_pb2.py  types_pb2.pyi
src/substrait_visitors/: substrait_plan_visitor.py
src/transforms/: add_extension_uris.py  label_relations.py  output_field_tracking_visitor.py  rename_functions.py  replace_local_files.py  replace_virtual_tables.py  simplify_casts.py
