[project]
name = "spark-substrait-gateway"
description = "Implements a gateway that speaks the SparkConnect protocol and drives a backend using Substrait (over ADBC Flight SQL)."
authors = [{name = "Substrait contributors", email = "substrait@googlegroups.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = ["protobuf >= 3.20"]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/gateway/_version.py"

[project.optional-dependencies]
gen_proto = ["protobuf == 3.20.1", "protoletariat >= 2.0.0"]
test = ["pytest >= 7.0.0"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--ignore=third_party"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
respect-gitignore = true
# should target minimum supported version
target-version = "py310"
# never autoformat upstream or generated code
exclude = ["third_party/", "src/spark/connect"]
# do not autofix the following (will still get flagged in lint)
unfixable = [
  "F401",  # unused imports
  "T201",  # print statements
]

[tool.pylint.MASTER]
extension-pkg-allow-list = ["pyarrow.lib"]
ignore-paths = '^src/spark/connect/.*$'
